# GPC

./: LICENSE  README.md
C/include/: constraints.h  cost.h  dynamic_model.h  optimizer.h
C/neural_network_1/: neural_network.cpp
C/neural_network_2/: neural_network.cpp  neural_network_params.h
C/src/: optimizer.cpp
arduino/: CMakeLists.txt
arduino/NN_GPC/: NN_GPC.cpp  NN_GPC.h  NN_GPC.ino  constraints.h  cost.h  dynamics.cpp  dynamics.h  functions.cpp  functions.h  neural_network.cpp  neural_network.h  nrutil.cpp  nrutil.h  optimizer.cpp  optimizer.h
arduino/include/: functions.h
arduino/neural_network_1/: dense.cpp  neural_network.cpp  neural_network_params.h
arduino/neural_network_2/: neural_network.cpp
arduino/src/: functions.cpp
arduino/test/: test.cpp
optimizer/: optimizer.py
optimizer/constraints/: constraints.py
optimizer/cost/: cost.py
optimizer/hessians/: neural_network_hessian.py
python/: README.md  setup.sh
python/constraints/: constraints.py
python/cost/: car_driver_2D_cost.py  car_mpc.py  neural_network_cost.py
python/dyno_model/: car_driver_2D.py  car_ltv_mpc.py  dynamic_model.py  neural_network_predictor.py
python/example/: car_driver.py  car_mpc.py  car_test.py  output  test_controller.py  test_controller_car.py
python/functions/: functions.py
python/hessians/: hessian.py
python/optimizer/: newton_raphson.py  optimizer.py  qp.py
python/optimizer/cost/: neural_network_cost.py
